trying to pull data from db to site

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,11 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+
+ <% corgis.forEach (function(corgi) { %>
+    <p>Corgi Name: <%= corgi.name %></p>
+    <p>Description: <%= pirate.description %></p>
+    <% }); %>
+
   </body>
 </html>
