now shows one random corgi at a time on main pg

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -8,10 +8,10 @@
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
 
-    <% corgis.forEach (function(corgi) { %>
     <p>Corgi Name: <%= corgi.name %></p>
     <p>Description: <%= corgi.description %></p>
-    <% }); %>
+
+<!-- A form with a submit button "like", goes to post request that changes liked attr to true -->
 
   </body>
 </html>
