--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,5 +8,9 @@
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
 
+ <% corgis.forEach (function(corgi) { %>
+    <p>Corgi Name: <%= corgi.name %></p>
+    <p>Description: <%= corgi.description %></p>
+    <% }); %>
   </body>
 </html>
