--- a/views/show.ejs
+++ b/views/show.ejs
@@ -12,12 +12,19 @@
     <p>Description: <%= corgi.description %></p>
     <img src="<%= corgi.pictureURL %>" alt="Corgi" height="142" width="142">
 
-<!-- A form with a submit button "like", goes to post request that changes liked attr to true -->
+<!-- Form with submit buttons "dislike" and "like", goes to post request that changes liked attr to true -->
+<form name="new_user_form" id="new_user_form" method="post" action="/corgis">
+    <input type="hidden" name="id" value="<%=corgi._id%>">
+    <input type="hidden" name="liked" value="false">
+    <input type="submit" value="Dislike">
+</form>
+
 <form name="new_user_form" id="new_user_form" method="post" action="/corgis">
     <input type="hidden" name="id" value="<%=corgi._id%>">
     <input type="hidden" name="liked" value="true">
     <input type="submit" value="Like">
 </form>
+
 
   </body>
 </html>
